feat: implement automatic user-permission intermediate table insertion